# RocketSimPy

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  build.sh  test.sh
.github/workflows/: python.yml  test.yml
libsrc/bullet3-3.24/BulletDynamics/Vehicle/: btDefaultVehicleRaycaster.cpp
python/: CMakeLists.txt  README.md  pyproject.toml
python/src/: RLViserSocket.h  bindings.cpp
python/tests/: __init__.py  conftest.py  test_arena.py  test_ball.py  test_basic.py  test_boost_pad.py  test_car.py  test_rlgym.py  test_rlviser.py
src/Math/: Math.cpp  Math.h
src/Sim/: GameMode.h
src/Sim/Arena/: Arena.cpp  Arena.h
src/Sim/Ball/: Ball.cpp  Ball.h
src/Sim/BoostPad/: BoostPad.cpp  BoostPad.h
src/Sim/Car/: Car.cpp  Car.h
src/Sim/MutatorConfig/: MutatorConfig.h
src/Sim/btVehicleRL/: btVehicleRL.cpp  btVehicleRL.h
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  main.cpp
tests/Arena/: ArenaTest.cpp
tests/Ball/: BallPhysicsTest.cpp
tests/Benchmark/: PerformanceBenchmark.cpp  PhaseProfiler.cpp  PhaseProfiler.h  ProfilerUtils.cpp  ProfilerUtils.h  READMEBenchmark.cpp  READMEBenchmark.h  StressBenchmark.cpp  StressBenchmark.h
tests/Car/: CarPhysicsTest.cpp
tests/Integration/: IntegrationTest.cpp
tests/Math/: MathTest.cpp
tests/StateManagement/: StateManagementTest.cpp
